finalizacion css paginas de detalle y algunas modificaciones en los estilos dentro de los html.

--- a/src/app/components/agentes/agentes.component.html
+++ b/src/app/components/agentes/agentes.component.html
@@ -19,4 +19,6 @@
         }
     </div>
   </div>
-}
+} @placeholder (minimum 500ms) {
+  <h2 class="text-center text-secondary">Loading ...</h2>
+  }
