--- a/src/app/components/personajes/personajes.component.html
+++ b/src/app/components/personajes/personajes.component.html
@@ -20,7 +20,9 @@
         }
     </div>
   </div>
-} 
+} @placeholder (minimum 500ms) {
+  <h2 class="text-center text-secondary">Loading ...</h2>
+  }
 
 <!-- <div class="row my-2">
   @for (personaje of personajes; track personaje.id){
