--- a/src/app/components/cartas/cartas.component.html
+++ b/src/app/components/cartas/cartas.component.html
@@ -24,7 +24,9 @@
 } -->
 
 @defer (when coleccionCartas.length > 0) {
-  <div class="row my-2">
+  <div class="container-fluid p-5">
+    <div class="row justify-content-center">
+        <h1 class="text-center">Pokemon Cards</h1>
     @for (card of coleccionCartas; track $index) {
       <div class="col-md-2 my-2">
         <div class="card" [routerLink]="'/pokemon-detail/' + card.id">
@@ -33,12 +35,13 @@
       </div>
     } 
   </div>
+  </div>
 
 
 } @placeholder (minimum 500ms) {
   <div class="col-12 my-2">
-    <h3 class="text-primary text-center border whadow-sm p-2 rounded-1">
-      <div class="spinner-border text-success" role="status">
+    <h3 class="text-secondary text-center border whadow-sm p-2 rounded-1">
+      <div class="spinner-border text-secondary" role="status">
         <span class="visually-hidden">Loading...</span>
       </div>
     </h3>
