--- a/src/app/components/pokemon-detail/pokemon-detail.component.html
+++ b/src/app/components/pokemon-detail/pokemon-detail.component.html
@@ -31,7 +31,7 @@
                 <span class="text-secondary">{{ card.set.name }}</span>
               </p>
               <p class="card-text">
-                <strong>Release Date:: </strong>
+                <strong>Release Date: </strong>
                 <span class="text-secondary">{{ card.set.releaseDate }}</span>
               </p>
               <p class="card-text">
