--- a/src/app/components/agentes/agentes.component.html
+++ b/src/app/components/agentes/agentes.component.html
@@ -1,7 +1,7 @@
 @defer (when apiData) {
   <div class="container-fluid p-5">
     <div class="row justify-content-center">
-      <h1 class="text-center">Valorant</h1>
+      <h1 class="text-center text-white">Valorant</h1>
 
         @for (agente of apiData.data; track $index) {
           <div class="col-xl-2 col-lg-4 col-md-6 col-sm-7 my-4">
