--- a/src/app/components/armas/armas.component.html
+++ b/src/app/components/armas/armas.component.html
@@ -24,13 +24,13 @@
 @defer (when armas.length > 0) {
   <div class="container-fluid p-5">
     <div class="row justify-content-center">
-        <h1 class="text-center">Monster Hunter Weapons</h1>
+        <h1 class="text-center text-white">Monster Hunter Weapons</h1>
 
     @for (arma of armas; track arma.id) {
       <div class="col-md-3 my-2">
         <div class="card" [routerLink]="'/monsterhunter-detail/' + arma.id">
           <div class="card-header bg-secondary">
-            <div class="card-title">
+            <div class="card-title text-center">
               <h3>{{arma.name}}</h3>
             </div>
             <div class="card-subtitle text-secondary">
@@ -43,9 +43,9 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h4 class="text-primary">Attack</h4>
+                <h4 class="text-secondary">Attack</h4>
                 <p class="text-danger">{{arma.attack.raw}}</p>
-                <h4 class="text-primary">Damage Type</h4>
+                <h4 class="text-secondary">Damage Type</h4>
                 <p class="text-danger">{{arma.damageType}}</p>
               </div>
             </div>
