--- a/src/app/components/cartas/cartas.component.html
+++ b/src/app/components/cartas/cartas.component.html
@@ -26,7 +26,7 @@
 @defer (when coleccionCartas.length > 0) {
   <div class="container-fluid p-5">
     <div class="row justify-content-center">
-        <h1 class="text-center">Pokemon Cards</h1>
+        <h1 class="text-center text-white">Pokemon Cards</h1>
     @for (card of coleccionCartas; track $index) {
       <div class="col-md-2 my-2">
         <div class="card" [routerLink]="'/pokemon-detail/' + card.id">
