--- a/src/app/components/cartas/cartas.component.html
+++ b/src/app/components/cartas/cartas.component.html
@@ -27,6 +27,26 @@
   <div class="container-fluid p-5">
     <div class="row justify-content-center">
         <h1 class="text-center text-white">Pokemon Cards</h1>
+
+        <!-- INICIO PAGINACION -->
+
+        <div class="row justify-content-center">
+          <div class="col-md-2">
+
+            <ngb-pagination
+            [collectionSize]="apiData.totalCount"
+            [pageSize]="apiData.count"
+            [(page)]="currentPage"
+            [ellipses]="true"
+            [maxSize]="5"
+            [rotate]="true"
+            (pageChange)="loadCards()"> </ngb-pagination>
+            
+          </div>
+        </div>
+
+        <!-- FIN PAGINACION -->
+       
     @for (card of coleccionCartas; track $index) {
       <div class="col-md-2 my-2">
         <div class="card" [routerLink]="'/pokemon-detail/' + card.id">
